--- a/index.html
+++ b/index.html
@@ -41,28 +41,27 @@
     <div class="container">
         <header>
             <h1><a href="index.html">COVID-19 en Alemania</a></h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed eros feugiat, porta lorem at, viverra quam. Suspendisse rutrum consectetur urna, sit amet ultricies leo lacinia a. Sed mollis volutpat.</h3>
-            <h4>Nam vulputate id orci eget consectetur</h4>
+            <h3>En Alemania, ningún otro tema ha sido predominante durante semanas que el coronavirus. Determina nuestra vida cotidiana, restringe la vida, pone en peligro la salud de todos.</h3>
         </header>
         <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>3 millones de pruebas de anticuerpos Covid-19 serán entregados al sistema de salud alemán este mes. "Las pruebas de anticuerpos nos dan una visión decisiva del brote", dijo el Ministro Federal de Sanidad Jens Spahn durante la visita a Roche, que está produciendo la nueva prueba en Baviera.Agradeció a los empleados por su compromiso en el desarrollo de la prueba. "Espero que Alemania conserve esta sensación de inicio", dijo Spahn.</p>
             <blockquote cite="https://…">
                 <p>Todos los ciudadanos que se someten a una prueba de anticuerpos en el consultorio médico ya tienen derecho a que se les entregue el resultado. Esto sigue siendo así. La cuestión de si una tarjeta de inmunidad adicional tiene sentido en el caso de Corona debe ser sopesada y debatida con calma por nosotros como sociedad. Por eso he pedido una opinión al Consejo de Ética Alemán. No queremos anticiparnos a este debate en curso y por el momento no estamos regulando nada por ley.</p>
                 <footer><a href="https://…">El Ministro Federal de Salud Jens Spahn</a></footer>
             </blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula.</p>
-            <h2>Casos confirmados y medidas</h2>
-            <p>Consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>La prueba de anticuerpos consiste en colocar una muestra de sangre en una placa de prueba preparada con fragmentos del nuevo coronavirus. Si la muestra de sangre contiene anticuerpos, se unen a los fragmentos del virus. En el siguiente paso se añade un marcador de color. Si hay anticuerpos en la sangre, el marcador se vuelve amarillo. La prueba de anticuerpos del coronavirus funciona dos o tres semanas después de la infección, porque sólo entonces el cuerpo ha producido anticuerpos.</p>
+            <h2>Decisión: Relajación en Alemania</h2>
+            <p>El miércoles se decidió cómo procedería Alemania con respecto a la prohibición de contactos y otras medidas. Hay cambios drásticos con efecto inmediato. El estado actual de la investigación y la situación en otros países puede verse aquí: </p>
             <ul>
-                <li><a href="page-1.html">Asunto de page-1.html</a></li>
-                <li><a href="page-2.html">Asunto de page-2.html</a></li>
+                <li><a href="page-1.html">Estado actual de la investigación</a></li>
+                <li><a href="page-2.html">La situación en otro países</a></li>
             </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>En Alemania la apertura de las primeras tiendas debería ser el primer paso hacia un poco más de normalidad.  Cuanto más duras sean las medidas de cierre, según el pronóstico de la mayoría de los expertos, más duro será el golpe a la economía. Miles de pequeñas empresas ya se enfrentan a la ruina del coronavirus.</p>
             <figure>
                 <img src="image-home.jpg" src="describe lo que se ven la imagen">
-                <figcaption>Describe la imagen en relación al asunto del artículo.</figcaption>
+                <figcaption>Persona de compras con un protector bucal. </figcaption>
             </figure>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>Pero el martes siguiente, la siguiente restricción después de las medidas de relajación siguió: el uso obligatorio de máscaras en todos los estados federales. Los ciudadanos deben llevar ahora una máscara facial en el transporte público y cuando van de compras.</p>
         </section>
         <footer>
             <hr>
