--- a/page-1.html
+++ b/page-1.html
@@ -38,73 +38,65 @@
         </header>
         <section>
             <h2>Estado actual de la investigación</h2>
-            <p>Consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>El desarrollo de una vacuna contra el coronavirus se está llevando a cabo a toda velocidad en más de 50 proyectos de investigación en todo el mundo. Ya se están probando varias posibles vacunas en humanos.</p>
+            <p>Se está avanzando rápidamente en la búsqueda de una vacuna contra el coronavirus. El desarrollo de una vacuna normalmente lleva unos 15 a 20 años, lo que también se debe a los estrictos reglamentos y requisitos que deben cumplir los científicos y las empresas. Las siguientes fases deben pasar antes de que una vacuna pueda ser aprobada:</p>
             <dl>
-                <dt>DEFINITION TERM</dt>
-                <dd>Definition definition.</dd>
-                <dt>DEFINITION TERM</dt>
-                <dd>Definition definition.</dd>
-                <dt>DEFINITION TERM</dt>
-                <dd>Definition definition.</dd>                
+                <dt>FASE 1</dt>
+                <dd>Examen del virus</dd>
+                <dt>FASE 2</dt>
+                <dd>Desarrollo de la vacuna</dd>
+                <dt>FASE 3</dt>
+                <dd>Prueba de eficacia y tolerabilidad en animales</dd>
+				<dt>FASE 4</dt>
+                <dd>largas pruebas en voluntarios</dd> 
+				<dt>FASE 5</dt>
+                <dd>Pasar por el procedimiento de aprobación</dd> 
+				<dt>FASE 6</dt>
+                <dd>Producción</dd> 
             </dl>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. Nulla semper consequat eros vel accumsan.</p>
+            <p>Desde que la pandemia de coronavirus mantiene al mundo entero en ascuas, las regulaciones se han relajado hasta cierto punto para tener una vacuna disponible lo más rápido posible y salvar vidas. Por lo tanto, algunas empresas ya están en la fase cuatro.  A continuación se presentan algunas de las empresas que están investigando el desarrollo de una vacuna: </p>
             <table>
 
                 <thead>
                     <tr>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
-                        <th scope="col">TABLE HEADER</th>
+                        <th scope="col">EMPRESA / INSTITUTO DE INVESTIGACION</th>
+                        <th scope="col">VACUNA</th>
+                        <th scope="col">TIPO DE VACUNA</th>
+                        <th scope="col">PRUEBAS CON VOLUNTARIOS</th>
+                        <th scope="col">FUENTES</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Moderna (USA)</th>
+                        <td>ARNm-1273</td>
+                        <td>vacuna basada en el gen (ARNm)</td>
+                        <td>desde el 16.03. en los EE.UU. (Fase I)</td>
+                        <td>ABC News, Bloomberg</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
+                        <th scope="row">Inovio (USA)</th>
+                        <td>INO-4800</td>
+                        <td>vacuna de base genética (ADN) administrada por electroporación</td>
+                        <td>en los EE.UU. desde el 06.04. (Fase I)</td>
+                        <td>Inovio, Inovio, Registereintrag Clinicaltrials.gov</td>
                     </tr>
                     <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">table header</th>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                        <td>table data</td>
-                    </tr>
+                        <th scope="row">Wuhan Institute of Biological Products</th>
+                        <td>inactivated Novel Coronavirus Pneumonia (COVID-19) vaccine (Vero cells)</td>
+                        <td>Vacuna con virus inactivado</td>
+                        <td>en China en la Fase II desde el 25.04.2020	</td>
+                        <td>Clinicaltrialsarena ChiCTR</td>
+                    </tr>             
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="5">Indica fuente(s) de los datos</td>
+                        <td colspan="5">https://www.vfa.de/de/arzneimittel-forschung/woran-wir-forschen/impfstoffe-zum-schutz-vor-coronavirus-2019-ncov</td>
                     </tr>
                 </tfoot>
 
             </table>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem. Quisque consequat sagittis odio eget gravida. Integer dignissim diam sit amet finibus ullamcorper. <a href="page-2.html">Vínculo a page-2.html</a>.</p>
+            <p>La rapidez con que se puedan iniciar las campañas de vacunación depende no sólo de la velocidad de desarrollo, ensayo y aprobación de las vacunas, sino también de la capacidad de producción. Por lo tanto, no es decisivo quién obtiene la aprobación con la primera vacuna, sino que el mayor número posible de vacunas obtenga la aprobación y pueda ser producido utilizando muchas instalaciones de producción. Para más sobre la situación en otros países, ver: <a href="page-2.html">La situación en otros países</a>.</p>
         </section>
         <footer>
             <hr>
